pointsales/dev/app/yaml/services/cloudbridges-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbridges
  namespace: pointsales
spec:
  type: ClusterIP
  selector:
    app: cloudbridges
  ports:
    - name: http
      port: 9909
      protocol: TCP
      targetPort: 9909
