pointsales/dev/app/yaml/services/config-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-service
  namespace: pointsales
spec:
  type: ClusterIP
  selector:
    app: config
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: config-service-np
  namespace: pointsales
spec:
  type: NodePort
  selector:
    app: config
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30438
