pointsales/dev/app/yaml/services/registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-service
  namespace: pointsales
spec:
  type: ClusterIP
  selector:
    app: registry
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
