pointsales/dev/app/yaml/services/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-pointsales-ingress
  namespace: pointsales
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "pointsales-api-dev.tailorw.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateway-service
            port:
              number: 80
  defaultBackend:
    service:
      name: gateway-service
      port:
        number: 8080
